--- a/Transactions_Product_Demographic_Analysis.ipynb
+++ b/Transactions_Product_Demographic_Analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Transactions Product Demographic Analysis of a Random Comapny\n",
     "\n",
-    "We'll be working with the transactions, product, and hh_demographic tables for random company.\n",
+    "We'll be working with the transactions, product, and hh_demographic tables for a random company.\n",
     "\n",
     "* First, read in the transactions data.\n",
     "\n",
